--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/fs-extra": "^5.0.1",
-    "@types/request": "^2.47.0",
+    "@types/qs": "^6.5.1",
+    "axios": "^0.18.0",
     "fs-extra": "^5.0.0",
-    "request": "^2.85.0",
+    "qs": "^6.5.1",
     "typescript": "^2.8.1"
   }
 }
