--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "author": "lm9",
   "license": "MIT",
+  "devDependencies": {
+    "typescript": "^2.8.1",
+    "fs-extra": "^5.0.0",
+    "@types/fs-extra": "^5.0.1"
+  },
   "dependencies": {
-    "@types/fs-extra": "^5.0.1",
     "@types/qs": "^6.5.1",
     "axios": "^0.18.0",
-    "fs-extra": "^5.0.0",
-    "qs": "^6.5.1",
-    "typescript": "^2.8.1"
+    "qs": "^6.5.1"
   }
 }
