--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "tsc",
+    "prepack": "tsc",
     "build": "tsc"
   },
   "author": "lm9",
