--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "prepack": "tsc",
     "build": "tsc"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lm9/chumacera.git"
+  },
   "author": "lm9",
   "license": "MIT",
   "devDependencies": {
